--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,66 @@
 {
-    "name": "",
-    "short_name": "",
-    "description": "",
-    "start_url": "",
-    "display": "",
-    "background_color": "",
-    "theme_color": "",
-    "icons": [
-      {
-        "src": "/assets/images/icons/icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      }
-    ]
-  }
-  
+  "name": "Lab8-Starter",
+  "short_name": "Jiawen Wang, Victor Hsiao",
+  "description": "web rate",
+  "start_url": "./",
+  "display": "fullscreen",
+  "background_color": "black",
+  "theme_color": "orange",
+  "icons": [
+    {
+      "src": "./assets/images/icons/arrow-down.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/images/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/images/icons/icon-256x256.png",
+      "sizes":  "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/images/icons/icon-384x384.png",
+      "sizes":  "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/images/icons/icon-512x512.png",
+      "sizes":  "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/images/icons/0-star.svg",
+      "sizes":  "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "./assets/images/icons/1-star.svg",
+      "sizes":  "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "./assets/images/icons/2-star.svg",
+      "sizes":  "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "./assets/images/icons/3-star.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "./assets/images/icons/4-star.svg",
+      "sizes":  "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "./assets/images/icons/5-star.svg",
+      "sizes":  "192x192",
+      "type": "image/svg+xml"
+    }
+  ]
+}
